<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.development.astraeus.c196.AssessmentListDisplay">

    <TextView
        android:id="@+id/subHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/darker_gray"
        android:padding="8dp"
        android:paddingLeft="16dp"
        android:text="@string/courseTitle"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/assessmentTitleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/assessmentTitle"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subHeader"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginStart="16dp" />

    <TextView
        android:id="@+id/dueDateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:text="@string/dateFormatHint"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/assessmentTitleLabel"
        android:layout_marginEnd="16dp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:text="@string/due"
        app:layout_constraintRight_toLeftOf="@+id/dueDateLabel"
        app:layout_constraintBaseline_toBaselineOf="@+id/dueDateLabel"
        android:layout_marginEnd="8dp" />
</android.support.constraint.ConstraintLayout>